# harmony-server

./: Cargo.toml  LICENSE  README.md
harmony-api/: Cargo.toml
harmony-api/src/: api_response.rs  error_response.rs  handler.rs  lib.rs  model.rs  utils.rs
harmony-api/src/guards/: token_auth.rs
harmony-api/src/handler/: playlist_handler.rs  song_handler.rs  stream_handler.rs  user_handler.rs  version_handler.rs
harmony-api/src/model/: login_response.rs  new_playlist.rs  new_song.rs  new_user.rs
harmony-api/src/utils/: auth_util.rs  environment.rs  states.rs
harmony-core/: Cargo.toml
harmony-core/src/: core.rs  lib.rs  result.rs  tests.rs  tools.rs  utils.rs
harmony-core/src/core/: model.rs  template.rs  validation.rs
harmony-core/src/core/model/: playlist.rs  song.rs  user.rs
harmony-core/src/core/template/: new_playlist.rs  new_song.rs  new_user.rs
harmony-core/src/core/validation/: result.rs  (+1 more)
harmony-core/src/tests/: email.rs  name.rs  password.rs  username.rs  youtube_url.rs
harmony-core/src/tools/: ffmpeg.rs  file.rs  ytdlp.rs
harmony-core/src/utils/: environment.rs  song_file.rs
harmony-data/: Cargo.toml
harmony-data/migrations/2024-07-24-093844_create_users/: up.sql
harmony-data/migrations/2024-07-24-093855_create_songs/: down.sql  up.sql
harmony-data/migrations/2024-07-24-093903_create_playlists/: down.sql  up.sql
harmony-data/migrations/2024-07-24-094037_create_playlists_songs/: down.sql  up.sql
harmony-data/src/: lib.rs  model.rs  result.rs  schema.rs
harmony-data/src/model/: playlist.rs  playlist_song.rs  song.rs  user.rs
