[package]
name = "harmony-api"
version = "0.1.0"
authors = ["Daxanius"]
edition = "2021"

[dependencies]
harmony-core = { path = "../harmony-core" }

rocket = { version = "0.5", features = ["json"] }
serde_json = "1.0"
serde = "1.0"
jsonwebtoken = "9.3.0"
dotenvy = "0.15"
nanoid = "0.4.0"
tokio = "1.39"
